- Fixed an issue that prevented use of gravityflow_status_filter with an 'any' mode selection from being applied correctly.